<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/bg_row_border_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/nama_jalan"
                    android:textSize="13sp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/nama_jalan"
                    android:text="@string/nama_jalan"
                    android:textColor="@color/colorOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/bg_row_border_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/panjang_jalan"
                    android:layout_marginBottom="5dp"
                    android:textSize="13sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/panjang_jalan"
                    android:text="@string/panjang_jalan"
                    android:textColor="@color/colorOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/bg_row_border_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="Tarif jalan"
                    android:layout_marginBottom="5dp"
                    android:textSize="13sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:weightSum="10"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/roda4"
                        android:textColor="@color/colorOne"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:textStyle="bold"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/roda4"
                        android:textColor="@color/colorAccent"
                        android:textSize="12sp"
                        android:text="@string/app_name"
                        android:layout_width="0dp"
                        android:layout_weight="8"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:weightSum="10"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/roda6"
                        android:textColor="@color/colorOne"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/roda6"
                        android:textSize="12sp"
                        android:textColor="@color/colorAccent"
                        android:text="@string/app_name"
                        android:layout_width="0dp"
                        android:layout_weight="8"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/bg_row_border_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/jenis_kendaraan"
                    android:layout_marginBottom="5dp"
                    android:textSize="13sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <RadioGroup
                    android:id="@+id/radioTarif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/radio4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/roda4" />

                    <RadioButton
                        android:id="@+id/radio6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/roda6" />

                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lanjutkan"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:gravity="center"
                android:background="@drawable/bg_row_border_top_and_bottom"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/lanjutkan"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>