<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/colorFour"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="10"
        android:background="@drawable/bg_row_border_bottom"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="7"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/app_name"
                android:id="@+id/profile_name"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/app_name"
                android:id="@+id/profile_email"
                android:textSize="13sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/app_name"
                android:layout_marginTop="10dp"
                android:id="@+id/profile_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:gravity="end|right"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/edit_btn"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:id="@+id/btn_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/saldo_row"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="10"
        android:background="@drawable/bg_row_border_bottom"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/jumlah_saldo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:gravity="end|right"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content">
            <TextView
                android:text="Rp 0"
                android:textStyle="bold"
                android:id="@+id/saldo_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/logout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="center"
        android:background="@drawable/bg_row_border_top_and_bottom"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/logout"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>